--- a/package.json
+++ b/package.json
@@ -9,11 +9,11 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~50.0.17",
-    "expo-status-bar": "~1.11.1",
+    "expo": "^52.0.11",
+    "expo-status-bar": "~2.0.0",
     "mathjs": "^12.4.2",
-    "react": "18.2.0",
-    "react-native": "0.73.6"
+    "react": "18.3.1",
+    "react-native": "0.76.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
